--- a/web/static/templates/layout.html
+++ b/web/static/templates/layout.html
@@ -3,17 +3,30 @@
 <html>
   <head>
     <title>TeamGandalf</title>
-  <!-- <script src="js/getData.js"></script> -->
   <link rel="stylesheet"
   href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
   integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
   crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+  <script>
+    $(function(){
+        $('.submission').click(function(){
+          var selectedShape = $('input[name=shape]:checked').val();
+          $('.loading-indicator').removeClass('hidden');
+        })
+    });
+  </script>
   </head>
   <body>
-    <div class="container" >
+    <div class="container-fluid" >
       <h1>TeamGandalf -- SE 390 Project</h1>
       <a href="https://github.com/AKeizer/TeamGandalf"><h4>Github Repo</h4></a>
-      {{ template "body"}}
+      <div class="main-body">
+        {{ template "body"}}
+      </div>
+      <span class="loading-indicator hidden">Loading...</span>
     </div>
   </body>
 </html>
