Updated results template so it works

--- a/web/static/templates/results.html
+++ b/web/static/templates/results.html
@@ -6,7 +6,7 @@
         Summary: <span>{{.Summary}}</span>
       </p>
       <p>
-        Accuracy: <span>{{.Accuracy}}</span>
+        Accuracy: <span>{{.Accuracy}}%</span>
       </p>
     </div>
 </div>
