Template is fixed

--- a/web/static/templates/layout.html
+++ b/web/static/templates/layout.html
@@ -28,7 +28,7 @@
       <h1>TeamGandalf -- SE 390 Project</h1>
       <a href="https://github.com/AKeizer/TeamGandalf"><h4>Github Repo</h4></a>
       <div class="main-body">
-        {{ template "body"}}
+        {{ template "body" .}}
       </div>
       <span class="loading-indicator hidden">Loading...</span>
     </div>
